Added screen orientation lock to quick settings + added small fix for orientation change in swipe screen

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -78,6 +78,9 @@ statusbarNotifications-unread[few]={{n}} unread notifications
 statusbarNotifications-unread[many]={{n}} unread notifications
 statusbarNotifications-unread[other]={{n}} unread notifications
 
+#settings button
+settings-link=Settings
+
 # notifications
 notifications=Notifications
 clear-all=Clear all
