--- a/apps/system/locales/system.fr.properties
+++ b/apps/system/locales/system.fr.properties
@@ -20,6 +20,9 @@ emergencyCallsOnly-serviceProviderLocked   = (verrouillage opérateur)
 emergencyCallsOnly-corporateLocked         = (verrouillage entreprise)
 enterPIN=Code PIN
 
+#settings button
+settings-link=Paramètres
+
 # status bar text label
 statusbarLabel={{date}}, {{operator}}
 # see http://pubs.opengroup.org/onlinepubs/007908799/xsh/strftime.html
