Added screen orientation lock icon to statusbar, still testing

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -79,7 +79,7 @@ statusbarNotifications-unread[many]={{n}} unread notifications
 statusbarNotifications-unread[other]={{n}} unread notifications
 
 #settings button
-settings-link=Settings
+settings-link=Go to settings
 
 # notifications
 notifications=Notifications
