Added French translations for 'go to settings' button and 'close all' button Also added 'modui-' prefix to l10n locales attrinutes

--- a/apps/system/locales/system.en-US.properties
+++ b/apps/system/locales/system.en-US.properties
@@ -78,8 +78,11 @@ statusbarNotifications-unread[few]={{n}} unread notifications
 statusbarNotifications-unread[many]={{n}} unread notifications
 statusbarNotifications-unread[other]={{n}} unread notifications
 
-#settings button
-settings-link=Go to settings
+# modUI
+# settings button
+modui-settings-link=Go to settings
+# closee all - task manager
+modui-close-all-link=Close all
 
 # notifications
 notifications=Notifications
