--- a/apps/system/locales/system.fr.properties
+++ b/apps/system/locales/system.fr.properties
@@ -20,8 +20,11 @@ emergencyCallsOnly-serviceProviderLocked   = (verrouillage opérateur)
 emergencyCallsOnly-corporateLocked         = (verrouillage entreprise)
 enterPIN=Code PIN
 
-#settings button
-settings-link=Paramètres
+# modUI
+# settings button
+modui-settings-link=Paramètres
+# closee all - task manager
+modui-close-all-link=Fermer tous
 
 # status bar text label
 statusbarLabel={{date}}, {{operator}}
